--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,5 +7,7 @@ html
     link(rel='stylesheet', href='/javascripts/w2ui-1.5.rc1.css')
     script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/w2ui-1.5.rc1.js')
+    script(src='/javascripts/pdfobject.min.js')
+
   body
     block content
