--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   div(id="main" style="position: absolute; left: 0px; right: 0px; top: 0px; bottom: 0px;")
+  script w2ui.cadn = "#{cadn}"; console.log(w2ui);
   script(src='/javascripts/main.js')
 
 
